This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/30/28: Fixed "Use V in LD" parameter used when running Eucentricity by Focus
from the setup dialog, and renamed the menu item that opens the setup dialog.

4/22/24: SEM_4-1-10
4/20/24: Changed how SEM-AutoIT selects an aperture size on Windows 10 so it
now works on Glacios (In 4.1).

4/20/24: Fixed initial assignment of fallback rotation angles to go between
mag ranges instead of leaving one range unassigned (In 4.1).

4/12/24: SEM_4-1-9
4/12/24: Set default for MaxStackWindowSizeXY to 1024 if total memory limit
is above 5 GB (In 4.1).

3/28/24: Fixed AutocorrPeakVectors to stop script properly after an error
(In 4.1).

3/28/24: Fixed some needless scope changes when setting or leaving Low Dose
mode with states set and fixed image shift being left after changing between
View or Search states with different shift offsets (In 4.1).

3/28/24: Fixed position of X and Y values in Stage Move tool (In 4.1).

3/28/24: Fixed asking to save unchanged/empty Navigator when there is an
autosave file in short-term calibrations that no longer exists (In 4.1).

3/25/24: Fixed bad image shift being set when mag is change externally on a
JEOL after a low dose V -> R change that changes alpha (In 4.1).

3/21/24: Fixed peak erasing not being done when angles from autocorrelation
analysis were not in the same quadrant (In 4.1).

3/19/24: SEM_4-1-8
3/19/24: Fixed crash opening Acquire at Items from 3/17/24 change.

3/18/24: SEM_4-1-7
3/18/24: In setting up full montage, made it switch the montage to use View or
Search if it is the current area and has a 5x bigger pixel than the other area
(In 4.1).

3/17/24: Fixed Acquire at Items dialog to handle the script selections