@@ -477,6 +477,8 @@ hid_options_search              = SerialEM.chm::/html\menu_navigator.htm#hid_opt
 hid_navigator_writeasxml  			= SerialEM.chm::/html\menu_navigator.htm#hid_navigator_writeasxml
 hid_navigator_realign_scaling		= SerialEM.chm::/html\menu_navigator.htm#hid_navigator_realign_scaling
 hid_navigator_eraseperiodiccorr = SerialEM.chm::/html\menu_navigator.htm#hid_navigator_eraseperiodiccorr
+hid_nav_runscriptinmultishotacquire = SerialEM.chm::/html\menu_navigator.htm#hid_nav_runscriptinmultishotacquire
+hid_nav_setscripttorun          = SerialEM.chm::/html\menu_navigator.htm#hid_nav_setscripttorun
 hid_navigator_force_center_align	= SerialEM.chm::/html\menu_navigator.htm#hid_navigator_force_center_align
 hid_window_new									= SerialEM.chm::/html\menu_window.htm#hid_window_new
 hid_window_cascade							= SerialEM.chm::/html\menu_window.htm#hid_window_cascade
