@@ -45,7 +45,7 @@
       <li>%imagefile% will be substituted with the full path of the current image file, 
         but it will generate an error if there is no current file open..</li>
       <li>%currentdir% will be substituted with the full path to the current directory,</li>
-      <li>%navfile% will be subsituted with the full path of the Navigator file, ifthe 
+      <li>%navfile% will be substituted with the full path of the Navigator file, if the 
         Navigator is open and there is a Navigator file defined; otherwise it will 
         generate an error.</li>
     </ul>
