@@ -871,7 +871,8 @@
         <TR>
           <TD class="scriptcommand">SetVariable(var, value)</TD>
           <TD>Sets variable <B>var</B> within SerialEM scripting with <b>value</b>, which
-            must be a string.&nbsp; A one-dimensional array variable can be passed by separating
+            must be a string.&nbsp; Here and in the next 3 commands, <B>var</B> must be a 
+            string.&nbsp; A one-dimensional array variable can be passed by separating
             each value with newlines ('\n', written as '|\n' within SerialEM).&nbsp; The Python wrapper
              function 'listToSEMarray' can be used to convert a list with numeric and/or string
             values to a newline-separated string.&nbsp; Variable names are stored as upper case within
